y.output
Grammar

    0 $accept: program $end

    1 program: tokens

    2 tokens: tokens token
    3       | ε

    4 token: INT_C
    5      | FLOAT_C
    6      | ID
    7      | IF
    8      | ELSE
    9      | WHILE
   10      | BREAK
   11      | RETURN
   12      | CONST
   13      | TRUE_T
   14      | FALSE_T
   15      | INTEGER_T
   16      | BOOLEAN_T
   17      | FLOAT_T
   18      | VEC2_T
   19      | VEC3_T
   20      | VEC4_T
   21      | IVEC2_T
   22      | IVEC3_T
   23      | IVEC4_T
   24      | BVEC2_T
   25      | BVEC3_T
   26      | BVEC4_T
   27      | MAT2_T
   28      | MAT3_T
   29      | MAT4_T
   30      | GEQ
   31      | LEQ
   32      | NEQ
   33      | '{'
   34      | '}'
   35      | '('
   36      | ')'
   37      | '['
   38      | ']'
   39      | ';'
   40      | ','
   41      | '+'
   42      | '-'
   43      | '*'
   44      | '/'
   45      | '^'
   46      | '!'
   47      | '&'
   48      | '|'
   49      | '='
   50      | '<'
   51      | '>'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 46
    '&' (38) 47
    '(' (40) 35
    ')' (41) 36
    '*' (42) 43
    '+' (43) 41
    ',' (44) 40
    '-' (45) 42
    '/' (47) 44
    ';' (59) 39
    '<' (60) 50
    '=' (61) 49
    '>' (62) 51
    '[' (91) 37
    ']' (93) 38
    '^' (94) 45
    '{' (123) 33
    '|' (124) 48
    '}' (125) 34
    error (256)
    INT_C (258) 4
    FLOAT_C (259) 5
    ID (260) 6
    IF (261) 7
    ELSE (262) 8
    WHILE (263) 9
    BREAK (264) 10
    RETURN (265) 11
    CONST (266) 12
    TRUE_T (267) 13
    FALSE_T (268) 14
    INTEGER_T (269) 15
    BOOLEAN_T (270) 16
    FLOAT_T (271) 17
    VEC2_T (272) 18
    VEC3_T (273) 19
    VEC4_T (274) 20
    IVEC2_T (275) 21
    IVEC3_T (276) 22
    IVEC4_T (277) 23
    BVEC2_T (278) 24
    BVEC3_T (279) 25
    BVEC4_T (280) 26
    MAT2_T (281) 27
    MAT3_T (282) 28
    MAT4_T (283) 29
    GEQ (284) 30
    LEQ (285) 31
    NEQ (286) 32


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    program (52)
        on left: 1
        on right: 0
    tokens (53)
        on left: 2 3
        on right: 1 2
    token (54)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
        on right: 2


State 0

    0 $accept: • program $end

    $default  reduce using rule 3 (tokens)

    program  go to state 1
    tokens   go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: tokens •
    2 tokens: tokens • token

    INT_C      shift, and go to state 4
    FLOAT_C    shift, and go to state 5
    ID         shift, and go to state 6
    IF         shift, and go to state 7
    ELSE       shift, and go to state 8
    WHILE      shift, and go to state 9
    BREAK      shift, and go to state 10
    RETURN     shift, and go to state 11
    CONST      shift, and go to state 12
    TRUE_T     shift, and go to state 13
    FALSE_T    shift, and go to state 14
    INTEGER_T  shift, and go to state 15
    BOOLEAN_T  shift, and go to state 16
    FLOAT_T    shift, and go to state 17
    VEC2_T     shift, and go to state 18
    VEC3_T     shift, and go to state 19
    VEC4_T     shift, and go to state 20
    IVEC2_T    shift, and go to state 21
    IVEC3_T    shift, and go to state 22
    IVEC4_T    shift, and go to state 23
    BVEC2_T    shift, and go to state 24
    BVEC3_T    shift, and go to state 25
    BVEC4_T    shift, and go to state 26
    MAT2_T     shift, and go to state 27
    MAT3_T     shift, and go to state 28
    MAT4_T     shift, and go to state 29
    GEQ        shift, and go to state 30
    LEQ        shift, and go to state 31
    NEQ        shift, and go to state 32
    '{'        shift, and go to state 33
    '}'        shift, and go to state 34
    '('        shift, and go to state 35
    ')'        shift, and go to state 36
    '['        shift, and go to state 37
    ']'        shift, and go to state 38
    ';'        shift, and go to state 39
    ','        shift, and go to state 40
    '+'        shift, and go to state 41
    '-'        shift, and go to state 42
    '*'        shift, and go to state 43
    '/'        shift, and go to state 44
    '^'        shift, and go to state 45
    '!'        shift, and go to state 46
    '&'        shift, and go to state 47
    '|'        shift, and go to state 48
    '='        shift, and go to state 49
    '<'        shift, and go to state 50
    '>'        shift, and go to state 51

    $default  reduce using rule 1 (program)

    token  go to state 52


State 3

    0 $accept: program $end •

    $default  accept


State 4

    4 token: INT_C •

    $default  reduce using rule 4 (token)


State 5

    5 token: FLOAT_C •

    $default  reduce using rule 5 (token)


State 6

    6 token: ID •

    $default  reduce using rule 6 (token)


State 7

    7 token: IF •

    $default  reduce using rule 7 (token)


State 8

    8 token: ELSE •

    $default  reduce using rule 8 (token)


State 9

    9 token: WHILE •

    $default  reduce using rule 9 (token)


State 10

   10 token: BREAK •

    $default  reduce using rule 10 (token)


State 11

   11 token: RETURN •

    $default  reduce using rule 11 (token)


State 12

   12 token: CONST •

    $default  reduce using rule 12 (token)


State 13

   13 token: TRUE_T •

    $default  reduce using rule 13 (token)


State 14

   14 token: FALSE_T •

    $default  reduce using rule 14 (token)


State 15

   15 token: INTEGER_T •

    $default  reduce using rule 15 (token)


State 16

   16 token: BOOLEAN_T •

    $default  reduce using rule 16 (token)


State 17

   17 token: FLOAT_T •

    $default  reduce using rule 17 (token)


State 18

   18 token: VEC2_T •

    $default  reduce using rule 18 (token)


State 19

   19 token: VEC3_T •

    $default  reduce using rule 19 (token)


State 20

   20 token: VEC4_T •

    $default  reduce using rule 20 (token)


State 21

   21 token: IVEC2_T •

    $default  reduce using rule 21 (token)


State 22

   22 token: IVEC3_T •

    $default  reduce using rule 22 (token)


State 23

   23 token: IVEC4_T •

    $default  reduce using rule 23 (token)


State 24

   24 token: BVEC2_T •

    $default  reduce using rule 24 (token)


State 25

   25 token: BVEC3_T •

    $default  reduce using rule 25 (token)


State 26

   26 token: BVEC4_T •

    $default  reduce using rule 26 (token)


State 27

   27 token: MAT2_T •

    $default  reduce using rule 27 (token)


State 28

   28 token: MAT3_T •

    $default  reduce using rule 28 (token)


State 29

   29 token: MAT4_T •

    $default  reduce using rule 29 (token)


State 30

   30 token: GEQ •

    $default  reduce using rule 30 (token)


State 31

   31 token: LEQ •

    $default  reduce using rule 31 (token)


State 32

   32 token: NEQ •

    $default  reduce using rule 32 (token)


State 33

   33 token: '{' •

    $default  reduce using rule 33 (token)


State 34

   34 token: '}' •

    $default  reduce using rule 34 (token)


State 35

   35 token: '(' •

    $default  reduce using rule 35 (token)


State 36

   36 token: ')' •

    $default  reduce using rule 36 (token)


State 37

   37 token: '[' •

    $default  reduce using rule 37 (token)


State 38

   38 token: ']' •

    $default  reduce using rule 38 (token)


State 39

   39 token: ';' •

    $default  reduce using rule 39 (token)


State 40

   40 token: ',' •

    $default  reduce using rule 40 (token)


State 41

   41 token: '+' •

    $default  reduce using rule 41 (token)


State 42

   42 token: '-' •

    $default  reduce using rule 42 (token)


State 43

   43 token: '*' •

    $default  reduce using rule 43 (token)


State 44

   44 token: '/' •

    $default  reduce using rule 44 (token)


State 45

   45 token: '^' •

    $default  reduce using rule 45 (token)


State 46

   46 token: '!' •

    $default  reduce using rule 46 (token)


State 47

   47 token: '&' •

    $default  reduce using rule 47 (token)


State 48

   48 token: '|' •

    $default  reduce using rule 48 (token)


State 49

   49 token: '=' •

    $default  reduce using rule 49 (token)


State 50

   50 token: '<' •

    $default  reduce using rule 50 (token)


State 51

   51 token: '>' •

    $default  reduce using rule 51 (token)


State 52

    2 tokens: tokens token •

    $default  reduce using rule 2 (tokens)
